# gwcloud_bilby

./: .arcconfig  .arclint  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  HTMX_MIGRATION_ISSUES.md  README.md  docker-compose.yaml  example.env  init_bilby_dev_environment.sh  opencode.json  runserver.sh  start_bilby.sh
gwosc_cron/: .env.example  .flake8  .gitignore  Dockerfile  README.md  build_docker.sh  gwosc_ingest.py  local.example-dev.py  pyproject.toml  requirements.in  requirements.txt  run_cron.sh  test_gwosc_ingest.py
gwosc_cron/test_fixtures/: bad.h5  colon.h5  good.h5  multiple_configs.h5  no_configs.h5
gwosc_cron/tests/: base.py  test_ingest.py  test_locking.py  test_retry.py
src/: .coveragerc  development-manage.py  manage.py  production-manage.py  pyproject.toml  requirements.in  requirements.txt  run_coverage.sh  run_tests.sh
src/bilby/: admin.py  apps.py  forms.py  models.py  schema.py  types.py  variables.py  views.py
src/bilby/migrations/: 0001_initial.py  0002_auto_20200403_0346.py  0003_bilbyjob_job_id.py  0004_auto_20200505_0033.py  0005_auto_20200508_0703.py  0006_auto_20200511_0428.py  0007_auto_20200512_0126.py  0008_auto_20200508_0830.py  0008_auto_20200514_0204.py  0009_auto_20200513_0552.py  0010_merge_20200514_0412.py  0011_auto_20200720_0109.py  0012_insert_default_labels.py  0013_auto_20210321_2322.py  0013_bilbyjob_ini_string.py  0014_label_protected.py  0014_merge_20210527_0404.py  0015_insert_preferred_label.py  0016_merge_20210601_0127.py  0017_pull_ini_files.py
src/bilby/tests/: test_authenticated_queries.py  test_ligo_permissions.py  test_models.py  test_schema.py  testcases.py  tests.py
src/bilby/utils/: derive_job_status.py  request_file_download_id.py  request_file_list.py  request_job_status.py
src/bilbyui/: admin.py  apps.py  constants.py  context_processors.py  forms.py  models.py  schema.py  status.py  types.py  urls.py  validators.py  variables.py  views.py
src/bilbyui/migrations/: 0001_initial.py  0002_auto_20200403_0346.py  0003_bilbyjob_job_id.py  0004_auto_20200505_0033.py  0005_auto_20200508_0703.py  0006_auto_20200511_0428.py  0007_auto_20200512_0126.py  0008_auto_20200508_0830.py  0008_auto_20200514_0204.py  0009_auto_20200513_0552.py  0010_merge_20200514_0412.py  0011_auto_20200720_0109.py  0012_insert_default_labels.py  0013_auto_20210321_2322.py  0013_bilbyjob_ini_string.py  0014_label_protected.py  0014_merge_20210527_0404.py  0015_insert_preferred_label.py  0016_merge_20210601_0127.py  0017_pull_ini_files.py  0018_auto_20210603_0101.py  0019_inikeyvalue.py  0020_parse_ini_kv.py  0021_alter_bilbyjob_ini_string.py  0022_auto_20210606_0521.py  0023_alter_inikeyvalue_unique_together.py  0023_filedownloadtoken.py  0024_bilbyjob_is_uploaded_job.py  0024_rename_job_id_bilbyjob_job_controller_id.py  0025_bilbyjobuploadtoken.py  0025_fix_inikeyvalue.py  0026_auto_20211210_0412.py  0027_alter_bilbyjob_event_id.py  0028_eventid_is_ligo_event.py  0029_supportingfile.py  0030_bilbyjob_cluster.py  0031_rename_token_supportingfile_upload_token.py  0032_supportingfile_download_token.py  (+11 more)
src/bundle/: .gitignore  README.md  bundle.py  conda-environment.yml  db.py  params.json  requirements.txt  settings.py  test_files.py  test_jobs.py
src/e2e_tests/: README.md  react_test_case.py  test_react_frontend.py
src/gw_bilby/: base.py  build.py  collectstatic-settings.py  dev.py  development-settings.py  environment.py  jwt_tools.py  local.example.py  prod.py  production-settings.py  schema.py  test.py  urls.py  wsgi.py
src/react/: .babelrc  .env.template  .eslintrc.json  babel.config.js  eslint.config.js  index.html  jest.config.json  package-lock.json  package.json  vite.config.js  webpack.config.js
src/reports/: junit.xml
src/users/: models.py
(+415 files in other folders)
