[tool.poetry]
name = "gwosc-cron"
version = "0.1.0"
description = "GWOSC cron job utilities"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gwosc = "*"
gwcloud-python = "2.0.0"
requests = "*"
urllib3 = "<2"  # requests_toolbelt <1.0 (via gwcloud-python) needs urllib3 1.x (appengine)
h5py = "*"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "E402", "B905", "B904"]

[tool.poetry.group.dev.dependencies]
ruff = "*"
responses = "*"
coverage = "*"
unittest-xml-reporting = "*"
parameterized = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
