[tool.poetry]
name = "gwcloud-bilby"
version = "0.1.0"
description = "GW Cloud Bilby module for running bilby jobs from the web"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "*"  # provides distutils for pycondor/bilby-pipe on Python 3.12+
django = "*"
graphene-django = "*"
graphene-file-upload = "*"
django-filter = "*"
django-cors-headers = "*"
django-graphql-jwt = "*"
python-jwt = "*"
pyjwt = "*"
requests = "*"
django4-jenkins = "*"
munch = "*"
pyopenssl = "*"
bilby-pipe = "*"
responses = "*"
pyhumps = "*"
# Pinned to 8.x for compatibility with Elasticsearch server v8.8.1 (v9 client sends incompatible headers)
elasticsearch = ">=8.0,<9"
adacs-sso-plugin = {git = "https://gitlab.com/CAS-eResearch/internal/adacs-sso-plugin.git", tag = "v0.3.2"}
gunicorn = "*"
mysqlclient = "*"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".venv", "bilbyui/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "E402", "B905", "B904"]

[tool.poetry.group.dev.dependencies]
ruff = "*"
coverage = "*"
unittest-xml-reporting = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
